# stealer

./: .clang-format  CMakeLists.txt  README.md  config.hpp
src/: debugging.hpp  http.cpp  http.hpp  main.cpp  pch.hpp  result.hpp  util.hpp  xor.hpp
src/stealers/: base.hpp  chromium.hpp  filezilla.hpp  firefox.hpp
